HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuSafeRecordFieldDiagnostic/Expected.uv
//! Expected diagnostic metadata for the GpuSafeRecordFieldDiagnostic rejected-source specimen.

expectedDiagnostic("E-TYP-2640", "rule.20.GpuSafe-Record-Field-Err")
